--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,21 +7,19 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/layout.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/tabs.css")">
-         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/tabs-panes.css")">
-         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/standalone.css")">
-        
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/standalone.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/eggplant/jquery-ui-1.10.3.custom.css")">
 		
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery-1.9.1.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery-ui-1.10.3.custom.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/highcharts.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("javascripts/modules/exporting.js")" type="text/javascript"></script>
+		
 		@scripts
-		<script src="@routes.Assets.at("javascripts/jquery.tools.min.js")" type="text/javascript"></script>
 		
     </head>
-    
     <body>
 		<div class="wrapper">
   		<div id="header">
