Added the graph for the avg salary per department

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -29,15 +29,15 @@
 	 <div class="wrapper">
 		  <div id="header">
 		    <h1><a href="/">UniLink</a></h1>
-		    <p>Place to search for your Alumini</p>
+		    <p>Place to search for Alumini</p>
 		  </div>
 		
 		 
 		  <div id="topbar">
-		    <div class="fl_left">
+		    <div>
 		        <form action="/search" method="POST">
-		        <fieldset>
-		          <input type="text" id="universityName" name="universityName" value=""  />
+		        <fieldset style="width:350px;margin:0 auto;display:block;">
+		          <input style="width:250px;" id="universityName" name="universityName" title="University to search">
 		          <input type="submit" name="go" id="go" value="Search" />
 		        </fieldset>
 		      </form>
