--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -28,8 +28,8 @@
     <body>
 	 <div class="wrapper">
 		  <div id="header">
-		    <h1><a href="/">UniLink</a></h1>
-		    <p>Place to search for Alumini</p>
+		    <h1><a href="/">UniStats</a></h1>
+		    <p>All University Statistics on One Click</p>
 		  </div>
 		
 		 
