--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -119,7 +119,7 @@ $('#container2').highcharts({
 </script>    
 }
 
-@main("UniLinks",searchForm,  scripts) {
+@main("UniStats",searchForm,  scripts) {
 @if(!alumni.isEmpty) {
  <h1 align="center">@university Alumni</h1>
    <div id="tabs">
