Bar Chart Title

--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -62,10 +62,10 @@ $('#container2').highcharts({
                 type: 'column'
             },
             title: {
-                text: 'Average Salary per Department'
+                text: 'Average Salary per Department (Masters)'
             },
             subtitle: {
-                text: 'Average Salary per Department'
+               
             },
             xAxis: {
                 categories: [
